index: persist source documentation as Rocks overlays